v1.9.0 	29th Apr 2025
* Switched Gulp to ESBuild
* Added Admin Panel

v1.8.0 	28th Apr 2025
* Fixed the GASP bug on matches/playoffs
* Fixed the player profile matches bug

v1.7.0 	12th Aug 2024
* Fixed spy page
* Added decay to Rank Pub

v1.6.0 	13th Feb 2024
* Added map pages to Rank Pub API

v1.5.0 	28th Jan 2024
* Updated Rank Pub APIs

v1.3.1 	21th Nov 2023
* Added Rank Pub Profile API
* Added Rank Pub History API
* Added Rank Pub Home API

v1.3.0 	15th Nov 2023
* Added Rank Pub API

v1.2.2 	16th May 2023
* Added all-time records page

v1.2.1 	12th May 2023
* Added trophy cabinet to player overview
* Added +/- to player matches

v1.2.0 	11th May 2023
* Replaced MVB formula with GASP
* Added new stats: GASP, dGASP, and oGASP
* Added new leaders: grab / flaccid

v1.1.3 	19th April 2023
* Imported season: eltp 18 majors

v1.1.2 	18th April 2023
* Imported season: eltp 20 majors, eltp 19 majors
* Setup cron to automate spy updates

v1.1.1 	15th April 2023
* Upgraded DB server, and removed Redis

v1.1.0 	14th April 2023
* Fixed performance issues with Redis and Postgres

v1.0.5 	27th March 2023
* Adjusted true wr% formula to exclude disc, saves, and ties

v1.0.4 	26th March 2023
* Imported season: ecltp 7 majors, ecltp 7 minors

v1.0.3 	25th March 2023
* Refactored seasons to allow majors, minors, and novice tiers
* Imported season: ecltp 6 majors
* Added game count to player profile

v1.0.2 	24th March 2023
* Imported season: ecltp 6 minors

v1.0.1 	23rd March 2023
* Added page: player search
* Changed spy to use a true wr% formula

v1.0.0 	22nd March 2023
* Added page: homepage
* Implemented Redis caching
* Refactored auto_import.js to accept params, and to clear and regen cache

v0.1.4 	10th March 2023
* Renewed expired domain
* Added account age to spy

v0.1.3  15th July 2022
* Added page: spy

v0.1.2  21st May 2022
* Added color-scheme: dark

v0.1.1 	25th April 2022
* Added player cost, and captain indicator to teams
* Added player profile link to teams