@@ -1,6 +1,7 @@
 v1.9.0 	29th Apr 2025
-* Switched Gulp to ESBuild
+* Converted Gulp to ESBuild
 * Added Admin Panel
+* Refactored signup CSS and JS
 
 v1.8.0 	28th Apr 2025
 * Fixed the GASP bug on matches/playoffs
